--- a/3qsutantraaa/startup-website-template/hackathon.html
+++ b/3qsutantraaa/startup-website-template/hackathon.html
@@ -37,6 +37,19 @@
         <div class="spinner"></div>
     </div>
     <!-- Spinner End -->
+     <style>
+        .navbar .nav-link {
+    color: #343a40 !important; /* dark grey/black */
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.navbar .nav-link:hover,
+.navbar .nav-link.active {
+    color:darkblue !important; /* red on hover or current page */
+}
+
+    </style>
 
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark px-5 d-none d-lg-block">
@@ -61,10 +74,13 @@
 
     <!-- Navbar Start -->
     <div class="container-fluid position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
-            <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <img src="img/3Q-Sutantra-Logo-scaled.jpg" alt="3Q Logo" style="height: 80px; margin-right: 10px;">
-            </a>
+        <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 py-lg-0"
+     style="background-color:	#d5d6da;">
+
+
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+            <img src="img/3Q-Sutantra-Logo-scaled-removebg-preview.png" alt="3Q Logo" style="height: 40px; margin-right: 10px;">
+        </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
@@ -80,7 +96,9 @@
                             <a href="certificates.html" class="dropdown-item">3Q Academy Global Certification Program</a>
                             <a href="inter.html" class="dropdown-item">Internship</a>
                             <a href="faculty.html" class="dropdown-item">Faculty and Student Development</a>
-                            <a href="hackathon.html" class="dropdown-item">Hackathon/Techkathon</a>
+                            <a href="hackathon.html" class="dropdown-item">Hackathon/Techathon</a>
+                            <a href="tie.html" class="dropdown-item">TIE</a>
+                            <a href="Masterclass.html" class="dropdown-item">Master Class in Visual Media</a>
                         </div>
                     </div>
                     <a href="projects.html" class="nav-item nav-link">3Q Projects</a>
@@ -153,7 +171,7 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="position-relative h-100">
-                        <img class="w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s" src="img/hackathon-hero.jpg" style="object-fit: cover;" alt="Hackathon">
+                        <img class="w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s" src="img/hackathon.jpg" style="object-fit: cover;" alt="Hackathon">
                     </div>
                 </div>
             </div>
